# lexicographic-sort

./: .gitmodules  CMakeLists.txt  build-debug.sh
src/: main.cpp
